# tree-sitter-recipe

./: .clangd  .classpath  .dprint.jsonc  .gitignore  .project  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  biome.json  build.zig  build.zig.zon  demo-light.tape  demo.tape  go.mod  grammar.js  grammar.ts  jsr.json  package.json  pom.xml  pyproject.toml  setup.py  test-simple.prescription  test.recipe  theme.json  tree-sitter.json  tsconfig.json  tsdown.config.ts
.github/workflows/: build.yml  publish-jsr.yml  publish-npm.yml  release.yml
.zed/: settings.json
bindings/c/: tree-sitter-prescription.pc.in  tree-sitter-recipe.pc.in
bindings/c/tree_sitter/: tree-sitter-prescription.h
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/prescription/: TreeSitterPrescription.java
bindings/java/main/io/github/treesitter/jtreesitter/recipe/: TreeSitterRecipe.java
bindings/java/test/: TreeSitterPrescriptionTest.java  TreeSitterRecipeTest.java
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_prescription/: __init__.py  binding.c
bindings/python/tree_sitter_recipe/: __init__.py  __init__.pyi  _binding.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPrescriptionTests/: TreeSitterPrescriptionTests.swift
bindings/swift/TreeSitterRecipe/: recipe.h
bindings/swift/TreeSitterRecipeTests/: TreeSitterRecipeTests.swift
bindings/zig/: root.zig  test.zig
grammar/: latin.js  units.js
grammar/dutch/: frequency.ts  index.js
grammar/latin/: compounding.js  compounding.ts  conditional.js  conditional.ts  dispensing.js  dispensing.ts  forms.js  forms.ts  frequency.js  frequency.ts  index.js  index.ts  route.js  route.ts  timing.js  timing.ts  warning.js  warning.ts
grammar/units/: activity.js  activity.ts  countable.js  countable.ts  index.js  mass.js  mass.ts  rate.js  rate.ts  volume.js  volume.ts
plugins/: jsr-ts-self-types.ts
queries/: highlights.scm  injections.scm  locals.scm
scripts/: ensure-native.mjs  ensure-native.ts
src/: grammar.json  node-types.json  parser.c
src/tree_sitter/: array.h
test/corpus/: basic.txt  compound.txt  dutch_freq.txt  edge_cases.txt  expanded_vocab.txt  latin_abbrevs.txt  modern_freq.txt  prescriptions.txt  realworld.txt
test/fixtures/: ampule_injection.prescription  basic.prescription  comment_doc_block_attached.prescription  comment_inline_block.recipe  comment_line_eof.recipe  compound.prescription  compound_multiword.recipe  compound_ointment.prescription  conditional_clinical.recipe  dispense_reappearing.recipe  documented.prescription  dose_dutch_decimal.recipe  dose_glued_decimal.prescription  dose_international_decimal.prescription  dose_percentage.prescription  dose_range.recipe  drug_hyphenated_unicode.prescription  electrolyte_unit.prescription  ie_subcutaneous.recipe  inhaler_puffs.prescription  multiple_recipes.prescription  parenthetical_timing.recipe  q_series_frequency.prescription  rate_body_weight.recipe  rate_daily_total.prescription  rate_oncology_bsa.recipe  rate_unit_concentration.recipe  rate_unit_infusion.recipe  rate_weight_time.recipe  route_sublingual.prescription  sachet_count.prescription  sentence_terminator.prescription  timing_bedtime.recipe  unicode_accent_nacht.recipe  warning_stat.prescription
test/highlight/: comments.prescription  directives.prescription  expanded.prescription  latin.recipe  sections.prescription  sections.recipe
