[package]
name         = "tree-sitter-recipe"
description  = "Pharmacological recipe notation"
version      = "0.1.0"
authors      = ["Kaj Kowalski <info@kajkowalski.nl>"]
license      = "MIT"
readme       = "README.md"
keywords     = ["incremental", "parsing", "recipe", "tree-sitter"]
categories   = ["parser-implementations", "parsing", "text-editors"]
repository   = "https://github.com/kjanat/tree-sitter-recipe"
edition      = "2021"
autoexamples = false
build        = "bindings/rust/build.rs"
include      = [
  "/LICENSE",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26.8"

[build-dependencies]
cc = "1.2"
