[package]
name         = "tree-sitter-recipe"
version      = "0.2.0"
# tombi: lint.rules = { unused-noqa.disabled = true, deprecated.disabled = true }
authors      = ["Kaj Kowalski <info@kajkowalski.nl>"]
edition      = "2024"
description  = "Pharmacological recipe notation"
readme       = "README.md"
repository   = "https://github.com/kjanat/tree-sitter-recipe"
license      = "MIT"
keywords     = ["incremental", "parsing", "recipe", "tree-sitter"]
categories   = ["parser-implementations", "parsing", "text-editors"]
build        = "bindings/rust/build.rs"
include      = [
  "/LICENSE",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26.9"

[build-dependencies]
cc = "1.2"
