[project]
name            = "tree-sitter-recipe"
version         = "0.1.0"
description     = "Pharmacological recipe notation"
readme          = "README.md"
requires-python = ">=3.10"
license.text    = "MIT"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["incremental", "parsing", "recipe", "tree-sitter"]
classifiers     = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

[project.urls]
Funding  = "https://none"
Homepage = "https://github.com/kjanat/tree-sitter-recipe"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[build-system]
requires      = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"
