[project]
name            = "tree-sitter-recipe"
version         = "0.1.0"
description     = "Pharmacological recipe notation"
readme          = "README.md"
requires-python = ">=3.10"
license         = "MIT"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["incremental", "parsing", "recipe", "tree-sitter"]
classifiers     = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies    = ["typing_extensions>=4.12"]

[project.urls]
Homepage = "https://github.com/kjanat/tree-sitter-recipe"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[dependency-groups]
dev = ["basedpyright", "ruff", "setuptools>=77.0.0", "tree-sitter~=0.25", "ty", "wheel"]

[build-system]
requires      = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
include  = ["bindings/python", "setup.py"]
venvPath = "."
venv     = ".venv"

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"
