[project]
name            = "tree-sitter-recipe"
version         = "0.2.0"
description     = "Pharmacological recipe notation"
readme          = "README.md"
requires-python = ">=3.13"
license         = "MIT"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["incremental", "parsing", "recipe", "tree-sitter"]
classifiers     = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kjanat/tree-sitter-recipe"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[dependency-groups]
dev   = [
  { include-group = "build" },
  { include-group = "lint" },
  { include-group = "ts" },
]
build = ["setuptools>=77.0.0", "typing_extensions>=4.12", "wheel"]
lint  = ["basedpyright", "ruff", "ty"]
ts    = ["tree-sitter~=0.25"]

[build-system]
requires      = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build          = "cp313-*"
build-frontend = "build[uv]"

[tool.pyright]
include                = ["bindings/python", "setup.py"]
venvPath               = "."
venv                   = ".venv"
reportMissingTypeStubs = false
pythonVersion          = "3.13"

[tool.ruff]
target-version = "py313"
include        = ["bindings/python/**/*.py*", "setup.py"]

[tool.ty]
environment = { python-version = "3.13", python = ".venv" }
src         = { include = ["bindings/python/**/*.py*", "setup.py"] }

[tool.uv]
managed                  = true
extra-build-dependencies = { tree-sitter-recipe = ["typing_extensions>=4.12"] }
